--- a/AISAlert/src/main/webapp/config.properties
+++ b/AISAlert/src/main/webapp/config.properties
@@ -1,3 +1,5 @@
 #thoi gian chay he thong
-start_time=7:00
-end_time=17:30
+wireless_baudrate=9600
+wireless_port=COM7
+ais_port=COM7
+ais_baudrate=9600
