--- a/AISAlert/pom.xml
+++ b/AISAlert/pom.xml
@@ -46,6 +46,7 @@
     </dependencies>
 
     <build>
+		<finalName>aisalert</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -92,6 +93,16 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8080/manager</url>
+					<server>TomcatServer</server>
+					<path>/aisalert</path>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
