--- a/AISAlert/src/main/webapp/WEB-INF/web.xml
+++ b/AISAlert/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,10 @@
         <servlet-name>ControlServlet</servlet-name>
         <servlet-class>com.buoctien.aisalert.ControlServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RunAISEmulatedData</servlet-name>
+        <servlet-class>com.buoctien.aisalert.RunAISEmulatedData</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>OnLoadServlet</servlet-name>
         <url-pattern>/OnLoadServlet</url-pattern>
@@ -60,6 +64,10 @@
     <servlet-mapping>
         <servlet-name>ControlServlet</servlet-name>
         <url-pattern>/control.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RunAISEmulatedData</servlet-name>
+        <url-pattern>/RunAISEmulatedData</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
